		deprecated loader.
		Partial VCD loader fix for small files.
		Added preliminary do-nothing generate support in vermin.
		Fixed minmax_valid for partial VCD loader: affects scaling
		on floating-point traces.
3.3.48	04aug13	Fixed infinite loop hang on various helpers executables
		when extra arguments are specified.
		Delete changed marker name if it exists when marker is removed.
		Added "Open Hierarchy" option that will expand the SST and
		select the hierarchy for a given signal selected in the
		Signals window.
		Added preliminary support for FsdbReader.
		FSDB fix for generate created hierarchies.
		FSDB fix for new debug info output style to be parsed.
		Added generate as scope type to VCD/FST/FSDB.
		Preliminary add for module port direction for FSDB and FST.
		Display signal direction column in SST if not all signals are 
		declared as FST_VD_IMPLICIT.
		Fixed GTK warning when hide_sst is enabled and SST is opened
		then closed.
		Added extraction of in/out/inout from FSDB into FST with
		vcd2fst helper executable.  (It also converts FSDB to FST.)
		Added support for SV structures, unions, classes, packages,
		programs, and interfaces.
		Updated signal parsing in FST/FSDB to handle NC declarations
		for arrays in VCD.  (i.e., bitranges are missing)  Use vcd2fst
		or the -o option to read NC VCD files with arrays properly.
		Preliminary support for SV datatypes of bit, logic, int,
		shortint, longint, byte, enum, and shortreal in VCD and FST.
		Added sparse array datatype to FST (currently unused by
		gtkwave).
		Added support for attribute begin/end in FST.  (Currently
		unused by gtkwave.)  This allows embedding of various data
		inside the structure tree.
		Added autoraise on entry window on keystrokes or periodically
		when it exists.
		Added ability to store $comment in FST files via the attribute
		mechanism (FST_AT_MISC/FST_MT_COMMENT).
3.3.49	06aug13	Fix crashed caused by X11 protocol limitation for pixmap size.
