@@ -1326,4 +1326,5 @@
 		Added ability to store $comment in FST files via the attribute
 		mechanism (FST_AT_MISC/FST_MT_COMMENT).
 3.3.49	06aug13	Fix crashed caused by X11 protocol limitation for pixmap size.
+		Potential buffer overflow fix in vcd2fst.
 
